# pystring-reflow

./: .gitignore  pyproject.toml
src/pystring_reflow/: __init__.py  __main__.py
tests/: test_pystring_reflow.py
tests/inputs/: case_1.py  case_2.py  case_3.py  case_5.py
tests/outputs/: case_1.py  case_2.py  case_3.py  case_4.py  case_5.py
