[tool.black]
line-length = 80
target-version = ['py38']

[tool.poetry]
name = "pystring-reflow"
version = "0.1.1"
description = "Reflow Python strings to match a specified width"
authors = ["Joshu Coats <joshu@fearchar.net>"]
packages = [
  { include = "pystring_reflow", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
pystring-reflow = "pystring_reflow.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
isort = "^5.7.0"
black = "^20.8b1"
pluggy = "^0.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
